[gd_scene load_steps=8 format=3 uid="uid://d33exgfg6xadd"]

[ext_resource type="Script" path="res://Scripts/Level.gd" id="1_djtpg"]
[ext_resource type="TileSet" uid="uid://d04xx4ditrv4q" path="res://Tilemap/tileset.tres" id="1_osrfo"]
[ext_resource type="Script" path="res://Levels/Level1/text_manager.gd" id="3_3wlk1"]
[ext_resource type="PackedScene" uid="uid://chue80437n76g" path="res://Scenes/lantern.tscn" id="4_dssya"]
[ext_resource type="PackedScene" uid="uid://domcgy8cnu58f" path="res://Scenes/player.tscn" id="5_1g48c"]
[ext_resource type="PackedScene" uid="uid://ceukiy2iabejk" path="res://Scenes/movement_cntrl.tscn" id="6_palmy"]
[ext_resource type="PackedScene" uid="uid://day7v7snsfnq8" path="res://Scenes/jump_cntrl.tscn" id="7_5l611"]

[node name="Level1" type="Node2D" node_paths=PackedStringArray("lanterns")]
script = ExtResource("1_djtpg")
starting_anim_size = 1
disable_shrink = true
player = ExtResource("5_1g48c")
lanterns = [NodePath("Lantern")]

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(0, -54)
tile_set = ExtResource("1_osrfo")
format = 2
layer_0/name = "Foreground"
layer_0/tile_data = PackedInt32Array(786455, 0, 1, 786454, 0, 1, 786453, 0, 1, 786452, 0, 1, 786451, 0, 1, 786450, 0, 1, 786449, 0, 1, 786448, 0, 1, 786447, 0, 1, 786446, 0, 1, 786445, 0, 1, 786444, 0, 1, 786443, 0, 1, 786442, 0, 1, 786441, 0, 1, 786440, 0, 1, 786439, 0, 1, 786438, 0, 1, 786437, 0, 1, 786436, 0, 1, 786435, 0, 1, 786434, 0, 1, 786456, 0, 1, 720898, 0, 1, 655362, 0, 1, 589826, 0, 1, 524290, 0, 1, 524312, 0, 1, 589848, 0, 1, 655384, 0, 1, 720920, 0, 1, 458754, 0, 1, 393218, 0, 1, 327682, 0, 1, 327683, 0, 1, 327684, 0, 1, 327685, 0, 1, 327686, 0, 1, 327687, 0, 1, 327688, 0, 1, 327689, 0, 1, 327690, 0, 1, 327691, 0, 1, 327692, 0, 1, 327693, 0, 1, 327694, 0, 1, 327695, 0, 1, 327696, 0, 1, 327697, 0, 1, 327698, 0, 1, 327699, 0, 1, 327700, 0, 1, 327701, 0, 1, 327702, 0, 1, 327703, 0, 1, 327704, 0, 1, 393240, 0, 1, 458776, 0, 1)
layer_1/name = "Background"
layer_1/tile_data = PackedInt32Array(0, 65537, 4, 65536, 65537, 4, 131072, 65537, 4, 196608, 65537, 4, 262144, 65537, 4, 327680, 65537, 4, 393216, 65537, 4, 458752, 65537, 4, 524288, 65537, 4, 589824, 65537, 4, 655360, 65537, 4, 720896, 65537, 4, 786432, 65537, 4, 851968, 65537, 4, 917504, 65537, 4, 1, 65537, 4, 65537, 65537, 4, 131073, 65537, 4, 196609, 65537, 4, 262145, 65537, 4, 327681, 65537, 4, 393217, 65537, 4, 458753, 65537, 4, 524289, 65537, 4, 589825, 65537, 4, 655361, 65537, 4, 720897, 65537, 4, 786433, 65537, 4, 851969, 65537, 4, 917505, 65537, 4, 2, 65537, 4, 65538, 65537, 4, 131074, 65537, 4, 196610, 65537, 4, 262146, 65537, 4, 327682, 65537, 4, 393218, 65537, 4, 458754, 65537, 4, 524290, 65537, 4, 589826, 65537, 4, 655362, 65537, 4, 720898, 65537, 4, 786434, 65537, 4, 851970, 65537, 4, 917506, 65537, 4, 3, 65537, 4, 65539, 65537, 4, 131075, 65537, 4, 196611, 65537, 4, 262147, 65537, 4, 327683, 65537, 4, 393219, 65537, 4, 458755, 65537, 4, 524291, 65537, 4, 589827, 65537, 4, 655363, 65537, 4, 720899, 65537, 4, 786435, 65537, 4, 851971, 65537, 4, 917507, 65537, 4, 4, 65537, 4, 65540, 65537, 4, 131076, 65537, 4, 196612, 65537, 4, 262148, 65537, 4, 327684, 65537, 4, 393220, 65537, 4, 458756, 65537, 4, 524292, 65537, 4, 589828, 65537, 4, 655364, 65537, 4, 720900, 65537, 4, 786436, 65537, 4, 851972, 65537, 4, 917508, 65537, 4, 5, 65537, 4, 65541, 65537, 4, 131077, 65537, 4, 196613, 65537, 4, 262149, 65537, 4, 327685, 65537, 4, 393221, 65537, 4, 458757, 65537, 4, 524293, 65537, 4, 589829, 65537, 4, 655365, 65537, 4, 720901, 65537, 4, 786437, 65537, 4, 851973, 65537, 4, 917509, 65537, 4, 6, 65537, 4, 65542, 65537, 4, 131078, 65537, 4, 196614, 65537, 4, 262150, 65537, 4, 327686, 65537, 4, 393222, 65537, 4, 458758, 65537, 4, 524294, 65537, 4, 589830, 65537, 4, 655366, 65537, 4, 720902, 65537, 4, 786438, 65537, 4, 851974, 65537, 4, 917510, 65537, 4, 7, 65537, 4, 65543, 65537, 4, 131079, 65537, 4, 196615, 65537, 4, 262151, 65537, 4, 327687, 65537, 4, 393223, 65537, 4, 458759, 65537, 4, 524295, 65537, 4, 589831, 65537, 4, 655367, 65537, 4, 720903, 65537, 4, 786439, 65537, 4, 851975, 65537, 4, 917511, 65537, 4, 8, 65537, 4, 65544, 65537, 4, 131080, 65537, 4, 196616, 65537, 4, 262152, 65537, 4, 327688, 65537, 4, 393224, 65537, 4, 458760, 65537, 4, 524296, 65537, 4, 589832, 65537, 4, 655368, 65537, 4, 720904, 65537, 4, 786440, 65537, 4, 851976, 65537, 4, 917512, 65537, 4, 9, 65537, 4, 65545, 65537, 4, 131081, 65537, 4, 196617, 65537, 4, 262153, 65537, 4, 327689, 65537, 4, 393225, 65537, 4, 458761, 65537, 4, 524297, 65537, 4, 589833, 65537, 4, 655369, 65537, 4, 720905, 65537, 4, 786441, 65537, 4, 851977, 65537, 4, 917513, 65537, 4, 10, 65537, 4, 65546, 65537, 4, 131082, 65537, 4, 196618, 65537, 4, 262154, 65537, 4, 327690, 65537, 4, 393226, 65537, 4, 458762, 65537, 4, 524298, 65537, 4, 589834, 65537, 4, 655370, 65537, 4, 720906, 65537, 4, 786442, 65537, 4, 851978, 65537, 4, 917514, 65537, 4, 11, 65537, 4, 65547, 65537, 4, 131083, 65537, 4, 196619, 65537, 4, 262155, 65537, 4, 327691, 65537, 4, 393227, 65537, 4, 458763, 65537, 4, 524299, 65537, 4, 589835, 65537, 4, 655371, 65537, 4, 720907, 65537, 4, 786443, 65537, 4, 851979, 65537, 4, 917515, 65537, 4, 12, 65537, 4, 65548, 65537, 4, 131084, 65537, 4, 196620, 65537, 4, 262156, 65537, 4, 327692, 65537, 4, 393228, 65537, 4, 458764, 65537, 4, 524300, 65537, 4, 589836, 65537, 4, 655372, 65537, 4, 720908, 65537, 4, 786444, 65537, 4, 851980, 65537, 4, 917516, 65537, 4, 13, 65537, 4, 65549, 65537, 4, 131085, 65537, 4, 196621, 65537, 4, 262157, 65537, 4, 327693, 65537, 4, 393229, 65537, 4, 458765, 65537, 4, 524301, 65537, 4, 589837, 65537, 4, 655373, 65537, 4, 720909, 65537, 4, 786445, 65537, 4, 851981, 65537, 4, 917517, 65537, 4, 14, 65537, 4, 65550, 65537, 4, 131086, 65537, 4, 196622, 65537, 4, 262158, 65537, 4, 327694, 65537, 4, 393230, 65537, 4, 458766, 65537, 4, 524302, 65537, 4, 589838, 65537, 4, 655374, 65537, 4, 720910, 65537, 4, 786446, 65537, 4, 851982, 65537, 4, 917518, 65537, 4, 15, 65537, 4, 65551, 65537, 4, 131087, 65537, 4, 196623, 65537, 4, 262159, 65537, 4, 327695, 65537, 4, 393231, 65537, 4, 458767, 65537, 4, 524303, 65537, 4, 589839, 65537, 4, 655375, 65537, 4, 720911, 65537, 4, 786447, 65537, 4, 851983, 65537, 4, 917519, 65537, 4, 16, 65537, 4, 65552, 65537, 4, 131088, 65537, 4, 196624, 65537, 4, 262160, 65537, 4, 327696, 65537, 4, 393232, 65537, 4, 458768, 65537, 4, 524304, 65537, 4, 589840, 65537, 4, 655376, 65537, 4, 720912, 65537, 4, 786448, 65537, 4, 851984, 65537, 4, 917520, 65537, 4, 17, 65537, 4, 65553, 65537, 4, 131089, 65537, 4, 196625, 65537, 4, 262161, 65537, 4, 327697, 65537, 4, 393233, 65537, 4, 458769, 65537, 4, 524305, 65537, 4, 589841, 65537, 4, 655377, 65537, 4, 720913, 65537, 4, 786449, 65537, 4, 851985, 65537, 4, 917521, 65537, 4, 18, 65537, 4, 65554, 65537, 4, 131090, 65537, 4, 196626, 65537, 4, 262162, 65537, 4, 327698, 65537, 4, 393234, 65537, 4, 458770, 65537, 4, 524306, 65537, 4, 589842, 65537, 4, 655378, 65537, 4, 720914, 65537, 4, 786450, 65537, 4, 851986, 65537, 4, 917522, 65537, 4, 19, 65537, 4, 65555, 65537, 4, 131091, 65537, 4, 196627, 65537, 4, 262163, 65537, 4, 327699, 65537, 4, 393235, 65537, 4, 458771, 65537, 4, 524307, 65537, 4, 589843, 65537, 4, 655379, 65537, 4, 720915, 65537, 4, 786451, 65537, 4, 851987, 65537, 4, 917523, 65537, 4, 20, 65537, 4, 65556, 65537, 4, 131092, 65537, 4, 196628, 65537, 4, 262164, 65537, 4, 327700, 65537, 4, 393236, 65537, 4, 458772, 65537, 4, 524308, 65537, 4, 589844, 65537, 4, 655380, 65537, 4, 720916, 65537, 4, 786452, 65537, 4, 851988, 65537, 4, 917524, 65537, 4, 21, 65537, 4, 65557, 65537, 4, 131093, 65537, 4, 196629, 65537, 4, 262165, 65537, 4, 327701, 65537, 4, 393237, 65537, 4, 458773, 65537, 4, 524309, 65537, 4, 589845, 65537, 4, 655381, 65537, 4, 720917, 65537, 4, 786453, 65537, 4, 851989, 65537, 4, 917525, 65537, 4, 22, 65537, 4, 65558, 65537, 4, 131094, 65537, 4, 196630, 65537, 4, 262166, 65537, 4, 327702, 65537, 4, 393238, 65537, 4, 458774, 65537, 4, 524310, 65537, 4, 589846, 65537, 4, 655382, 65537, 4, 720918, 65537, 4, 786454, 65537, 4, 851990, 65537, 4, 917526, 65537, 4, 23, 65537, 4, 65559, 65537, 4, 131095, 65537, 4, 196631, 65537, 4, 262167, 65537, 4, 327703, 65537, 4, 393239, 65537, 4, 458775, 65537, 4, 524311, 65537, 4, 589847, 65537, 4, 655383, 65537, 4, 720919, 65537, 4, 786455, 65537, 4, 851991, 65537, 4, 917527, 65537, 4, 24, 65537, 4, 65560, 65537, 4, 131096, 65537, 4, 196632, 65537, 4, 262168, 65537, 4, 327704, 65537, 4, 393240, 65537, 4, 458776, 65537, 4, 524312, 65537, 4, 589848, 65537, 4, 655384, 65537, 4, 720920, 65537, 4, 786456, 65537, 4, 851992, 65537, 4, 917528, 65537, 4, 25, 65537, 4, 65561, 65537, 4, 131097, 65537, 4, 196633, 65537, 4, 262169, 65537, 4, 327705, 65537, 4, 393241, 65537, 4, 458777, 65537, 4, 524313, 65537, 4, 589849, 65537, 4, 655385, 65537, 4, 720921, 65537, 4, 786457, 65537, 4, 851993, 65537, 4, 26, 65537, 4, 65562, 65537, 4, 131098, 65537, 4, 196634, 65537, 4, 262170, 65537, 4, 327706, 65537, 4, 393242, 65537, 4, 458778, 65537, 4, 524314, 65537, 4, 589850, 65537, 4, 655386, 65537, 4, 720922, 65537, 4, 786458, 65537, 4, 851994, 65537, 4, 917529, 65537, 4, 917530, 65537, 4, 983040, 65537, 4, 1048576, 65537, 4, 1114112, 65537, 4, 1179648, 65537, 4, 1245184, 65537, 4, 1310720, 65537, 4, 983041, 65537, 4, 1048577, 65537, 4, 1114113, 65537, 4, 1179649, 65537, 4, 1245185, 65537, 4, 1310721, 65537, 4, 983042, 65537, 4, 1048578, 65537, 4, 1114114, 65537, 4, 1179650, 65537, 4, 1245186, 65537, 4, 1310722, 65537, 4, 983043, 65537, 4, 1048579, 65537, 4, 1114115, 65537, 4, 1179651, 65537, 4, 1245187, 65537, 4, 1310723, 65537, 4, 983044, 65537, 4, 1048580, 65537, 4, 1114116, 65537, 4, 1179652, 65537, 4, 1245188, 65537, 4, 1310724, 65537, 4, 983045, 65537, 4, 1048581, 65537, 4, 1114117, 65537, 4, 1179653, 65537, 4, 1245189, 65537, 4, 1310725, 65537, 4, 983046, 65537, 4, 1048582, 65537, 4, 1114118, 65537, 4, 1179654, 65537, 4, 1245190, 65537, 4, 1310726, 65537, 4, 983047, 65537, 4, 1048583, 65537, 4, 1114119, 65537, 4, 1179655, 65537, 4, 1245191, 65537, 4, 1310727, 65537, 4, 983048, 65537, 4, 1048584, 65537, 4, 1114120, 65537, 4, 1179656, 65537, 4, 1245192, 65537, 4, 1310728, 65537, 4, 983049, 65537, 4, 1048585, 65537, 4, 1114121, 65537, 4, 1179657, 65537, 4, 1245193, 65537, 4, 1310729, 65537, 4, 983050, 65537, 4, 1048586, 65537, 4, 1114122, 65537, 4, 1179658, 65537, 4, 1245194, 65537, 4, 1310730, 65537, 4, 983051, 65537, 4, 1048587, 65537, 4, 1114123, 65537, 4, 1179659, 65537, 4, 1245195, 65537, 4, 1310731, 65537, 4, 983052, 65537, 4, 1048588, 65537, 4, 1114124, 65537, 4, 1179660, 65537, 4, 1245196, 65537, 4, 1310732, 65537, 4, 983053, 65537, 4, 1048589, 65537, 4, 1114125, 65537, 4, 1179661, 65537, 4, 1245197, 65537, 4, 1310733, 65537, 4, 983054, 65537, 4, 1048590, 65537, 4, 1114126, 65537, 4, 1179662, 65537, 4, 1245198, 65537, 4, 1310734, 65537, 4, 983055, 65537, 4, 1048591, 65537, 4, 1114127, 65537, 4, 1179663, 65537, 4, 1245199, 65537, 4, 1310735, 65537, 4, 983056, 65537, 4, 1048592, 65537, 4, 1114128, 65537, 4, 1179664, 65537, 4, 1245200, 65537, 4, 1310736, 65537, 4, 983057, 65537, 4, 1048593, 65537, 4, 1114129, 65537, 4, 1179665, 65537, 4, 1245201, 65537, 4, 1310737, 65537, 4, 983058, 65537, 4, 1048594, 65537, 4, 1114130, 65537, 4, 1179666, 65537, 4, 1245202, 65537, 4, 1310738, 65537, 4, 983059, 65537, 4, 1048595, 65537, 4, 1114131, 65537, 4, 1179667, 65537, 4, 1245203, 65537, 4, 1310739, 65537, 4, 983060, 65537, 4, 1048596, 65537, 4, 1114132, 65537, 4, 1179668, 65537, 4, 1245204, 65537, 4, 1310740, 65537, 4, 983061, 65537, 4, 1048597, 65537, 4, 1114133, 65537, 4, 1179669, 65537, 4, 1245205, 65537, 4, 1310741, 65537, 4, 983062, 65537, 4, 1048598, 65537, 4, 1114134, 65537, 4, 1179670, 65537, 4, 1245206, 65537, 4, 1310742, 65537, 4, 983063, 65537, 4, 1048599, 65537, 4, 1114135, 65537, 4, 1179671, 65537, 4, 1245207, 65537, 4, 1310743, 65537, 4, 983064, 65537, 4, 1048600, 65537, 4, 1114136, 65537, 4, 1179672, 65537, 4, 1245208, 65537, 4, 1310744, 65537, 4, 983065, 65537, 4, 1048601, 65537, 4, 1114137, 65537, 4, 1179673, 65537, 4, 1245209, 65537, 4, 1310745, 65537, 4, 983066, 65537, 4, 1048602, 65537, 4, 1114138, 65537, 4, 1179674, 65537, 4, 1245210, 65537, 4, 1310746, 65537, 4)

[node name="CanvasGroup" type="CanvasGroup" parent="."]
position = Vector2(0, -54)

[node name="CanvasModulate" type="CanvasModulate" parent="CanvasGroup"]
color = Color(0.0313726, 0.0313726, 0.0313726, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="." node_paths=PackedStringArray("level")]
script = ExtResource("3_3wlk1")
level = NodePath("..")

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "LIT!"

[node name="Label2" type="Label" parent="CanvasLayer"]
offset_left = 211.0
offset_top = 46.0
offset_right = 251.0
offset_bottom = 69.0

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(88, 155)

[node name="Lantern" parent="." instance=ExtResource("4_dssya")]
position = Vector2(242, 79)

[node name="MovementCntrl" parent="." instance=ExtResource("6_palmy")]
position = Vector2(91, 126)

[node name="JumpCntrl" parent="." instance=ExtResource("7_5l611")]
position = Vector2(243, 124)
